--- a/docs/celeba.ipynb
+++ b/docs/celeba.ipynb
@@ -26,28 +26,32 @@
     "### FedAvg\n",
     "\n",
     "```bash\n",
+    "task_name=\"celeba\"\n",
+    "fed_optim=\"fedavg\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedavg_celeba.share\n",
-    "rm -rf /tmp/celeba/fedavg_celeba\n",
-    "rm -rf ./logs/deleba/fedavg_celeba\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedavg_celeba.share\\\n",
-    "    --task celeba\\\n",
-    "    --data_root benchmark/datasets/celeba/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedavg\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedavg_celeba\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -60,28 +64,32 @@
     "### FedSgd\n",
     "\n",
     "```bash\n",
+    "task_name=\"celeba\"\n",
+    "fed_optim=\"fedsgd\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedsgd_celeba.share\n",
-    "rm -rf /tmp/celeba/fedsgd_celeba\n",
-    "rm -rf ./logs/deleba/fedsgd_celeba\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedsgd_celeba.share\\\n",
-    "    --task celeba\\\n",
-    "    --data_root benchmark/datasets/celeba/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedavg\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedsgd_celeba\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -94,28 +102,32 @@
     "### FedEla\n",
     "\n",
     "```bash\n",
+    "task_name=\"celeba\"\n",
+    "fed_optim=\"fedela\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedela_celeba.share\n",
-    "rm -rf /tmp/celeba/fedela_celeba\n",
-    "rm -rf ./logs/deleba/fedela_celeba\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedela_celeba.share\\\n",
-    "    --task celeba\\\n",
-    "    --data_root benchmark/datasets/celeba/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedela\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedela_celeba\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -128,28 +140,32 @@
     "### FedProx\n",
     "\n",
     "```bash\n",
+    "task_name=\"celeba\"\n",
+    "fed_optim=\"fedprox\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedprox_celeba.share\n",
-    "rm -rf /tmp/celeba/fedprox_celeba\n",
-    "rm -rf ./logs/deleba/fedprox_celeba\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedprox_celeba.share\\\n",
-    "    --task celeba\\\n",
-    "    --data_root benchmark/datasets/celeba/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedprox\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedprox_celeba\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -162,28 +178,32 @@
     "### FedScaffold\n",
     "\n",
     "```bash\n",
+    "task_name=\"celeba\"\n",
+    "fed_optim=\"fedscaffold\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedscaffold_celeba.share\n",
-    "rm -rf /tmp/celeba/fedscaffold_celeba\n",
-    "rm -rf ./logs/deleba/fedscaffold_celeba\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedscaffold_celeba.share\\\n",
-    "    --task celeba\\\n",
-    "    --data_root benchmark/datasets/celeba/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedscaffold\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedscaffold_celeba\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -205,7 +225,9 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "from benchmark.utils.plot import plot"
+    "from benchmark.utils.plot import plot\n",
+    "\n",
+    "task_name = \"ceneba\""
    ]
   },
   {
@@ -246,11 +268,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/celeba/fedavg_celeba/celeba.json',\n",
-    "        '../logs/celeba/fedsgd_celeba/celeba.json',\n",
-    "        '../logs/celeba/fedela_celeba/celeba.json',\n",
-    "        '../logs/celeba/fedprox_celeba/celeba.json',\n",
-    "        '../logs/celeba/fedscaffold_celeba/celeba.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
@@ -294,11 +316,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/celeba/fedavg_celeba/celeba.json',\n",
-    "        '../logs/celeba/fedsgd_celeba/celeba.json',\n",
-    "        '../logs/celeba/fedela_celeba/celeba.json',\n",
-    "        '../logs/celeba/fedprox_celeba/celeba.json',\n",
-    "        '../logs/celeba/fedscaffold_celeba/celeba.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
@@ -329,11 +351,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/celeba/fedavg_celeba/celeba.json',\n",
-    "        '../logs/celeba/fedsgd_celeba/celeba.json',\n",
-    "        '../logs/celeba/fedela_celeba/celeba.json',\n",
-    "        '../logs/celeba/fedprox_celeba/celeba.json',\n",
-    "        '../logs/celeba/fedscaffold_celeba/celeba.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
@@ -364,11 +386,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/celeba/fedavg_celeba/celeba.json',\n",
-    "        '../logs/celeba/fedsgd_celeba/celeba.json',\n",
-    "        '../logs/celeba/fedela_celeba/celeba.json',\n",
-    "        '../logs/celeba/fedprox_celeba/celeba.json',\n",
-    "        '../logs/celeba/fedscaffold_celeba/celeba.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
