--- a/docs/cifar100.ipynb
+++ b/docs/cifar100.ipynb
@@ -26,28 +26,31 @@
     "### FedAvg\n",
     "\n",
     "```bash\n",
+    "task_name=\"cifar100\"\n",
+    "fed_optim=\"fedavg\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedavg_cifar100.share\n",
-    "rm -rf /tmp/cifar100/fedavg_cifar100\n",
-    "rm -rf ./logs/cifar100/fedavg_cifar100\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedavg_cifar100.share\\\n",
-    "    --task cifar100\\\n",
-    "    --data_root benchmark/datasets/cifar100/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedavg\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedavg_cifar100\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -60,28 +63,31 @@
     "### FedSgd\n",
     "\n",
     "```bash\n",
+    "task_name=\"cifar100\"\n",
+    "fed_optim=\"fedsgd\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedsgd_cifar100.share\n",
-    "rm -rf /tmp/cifar100/fedsgd_cifar100\n",
-    "rm -rf ./logs/cifar100/fedsgd_cifar100\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedsgd_cifar100.share\\\n",
-    "    --task cifar100\\\n",
-    "    --data_root benchmark/datasets/cifar100/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedsgd\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedsgd_cifar100\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -94,28 +100,31 @@
     "### FedEla\n",
     "\n",
     "```bash\n",
+    "task_name=\"cifar100\"\n",
+    "fed_optim=\"fedela\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedela_cifar100.share\n",
-    "rm -rf /tmp/cifar100/fedela_cifar100\n",
-    "rm -rf ./logs/cifar100/fedela_cifar100\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedela_cifar100.share\\\n",
-    "    --task cifar100\\\n",
-    "    --data_root benchmark/datasets/cifar100/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedela\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedela_cifar100\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -128,28 +137,31 @@
     "### FedProx\n",
     "\n",
     "```bash\n",
+    "task_name=\"cifar100\"\n",
+    "fed_optim=\"fedprox\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedprox_cifar100.share\n",
-    "rm -rf /tmp/cifar100/fedprox_cifar100\n",
-    "rm -rf ./logs/cifar100/fedprox_cifar100\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedprox_cifar100.share\\\n",
-    "    --task cifar100\\\n",
-    "    --data_root benchmark/datasets/cifar100/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedprox\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedprox_cifar100\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -162,28 +174,31 @@
     "### FedScaffold\n",
     "\n",
     "```bash\n",
+    "task_name=\"cifar100\"\n",
+    "fed_optim=\"fedscaffold\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedscaffold_cifar100.share\n",
-    "rm -rf /tmp/cifar100/fedscaffold_cifar100\n",
-    "rm -rf ./logs/cifar100/fedscaffold_cifar100\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedscaffold_cifar100.share\\\n",
-    "    --task cifar100\\\n",
-    "    --data_root benchmark/datasets/cifar100/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedscaffold\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedscaffold_cifar100\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -205,7 +220,9 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "from benchmark.utils.plot import plot"
+    "from benchmark.utils.plot import plot\n",
+    "\n",
+    "task_name = \"cifar100\""
    ]
   },
   {
@@ -225,11 +242,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/cifar100/fedavg_cifar100/cifar100.json',\n",
-    "        '../logs/cifar100/fedsgd_cifar100/cifar100.json',\n",
-    "        '../logs/cifar100/fedela_cifar100/cifar100.json',\n",
-    "        '../logs/cifar100/fedprox_cifar100/cifar100.json',\n",
-    "        '../logs/cifar100/fedscaffold_cifar100/cifar100.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
@@ -260,11 +277,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/cifar100/fedavg_cifar100/cifar100.json',\n",
-    "        '../logs/cifar100/fedsgd_cifar100/cifar100.json',\n",
-    "        '../logs/cifar100/fedela_cifar100/cifar100.json',\n",
-    "        '../logs/cifar100/fedprox_cifar100/cifar100.json',\n",
-    "        '../logs/cifar100/fedscaffold_cifar100/cifar100.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
@@ -274,7 +291,7 @@
     "        'FedScaffold',\n",
     "    ],\n",
     "    attributes=\"loss\",\n",
-    "    mode='train'\n",
+    "    mode=\"train\"\n",
     ")"
    ]
   },
@@ -295,11 +312,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/cifar100/fedavg_cifar100/cifar100.json',\n",
-    "        '../logs/cifar100/fedsgd_cifar100/cifar100.json',\n",
-    "        '../logs/cifar100/fedela_cifar100/cifar100.json',\n",
-    "        '../logs/cifar100/fedprox_cifar100/cifar100.json',\n",
-    "        '../logs/cifar100/fedscaffold_cifar100/cifar100.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
@@ -309,7 +326,7 @@
     "        'FedScaffold',\n",
     "    ],\n",
     "    attributes=\"accuracy\",\n",
-    "    mode='test'\n",
+    "    mode=\"test\"\n",
     ")"
    ]
   },
@@ -330,11 +347,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/cifar100/fedavg_cifar100/cifar100.json',\n",
-    "        '../logs/cifar100/fedsgd_cifar100/cifar100.json',\n",
-    "        '../logs/cifar100/fedela_cifar100/cifar100.json',\n",
-    "        '../logs/cifar100/fedprox_cifar100/cifar100.json',\n",
-    "        '../logs/cifar100/fedscaffold_cifar100/cifar100.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
