--- a/docs/femnist.ipynb
+++ b/docs/femnist.ipynb
@@ -26,28 +26,32 @@
     "### FedAvg\n",
     "\n",
     "```bash\n",
+    "task_name=\"femnist\"\n",
+    "fed_optim=\"fedavg\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedavg_femnist.share\n",
-    "rm -rf /tmp/femnist/fedavg_femnist\n",
-    "rm -rf ./logs/femnist/fedavg_femnist\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedavg_femnist.share\\\n",
-    "    --task femnist\\\n",
-    "    --data_root benchmark/datasets/femnist/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedavg\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedavg_femnist\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -60,28 +64,32 @@
     "### FedSgd\n",
     "\n",
     "```bash\n",
+    "task_name=\"femnist\"\n",
+    "fed_optim=\"fedsgd\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedsgd_femnist.share\n",
-    "rm -rf /tmp/femnist/fedsgd_femnist\n",
-    "rm -rf ./logs/femnist/fedsgd_femnist\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedsgd_femnist.share\\\n",
-    "    --task femnist\\\n",
-    "    --data_root benchmark/datasets/femnist/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedsgd\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedsgd_femnist\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -94,28 +102,32 @@
     "### FedEla\n",
     "\n",
     "```bash\n",
+    "task_name=\"femnist\"\n",
+    "fed_optim=\"fedela\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedela_femnist.share\n",
-    "rm -rf /tmp/femnist/fedela_femnist\n",
-    "rm -rf ./logs/femnist/fedela_femnist\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedela_femnist.share\\\n",
-    "    --task femnist\\\n",
-    "    --data_root benchmark/datasets/femnist/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedela\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedela_femnist\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -128,28 +140,32 @@
     "### FedProx\n",
     "\n",
     "```bash\n",
+    "task_name=\"femnist\"\n",
+    "fed_optim=\"fedprox\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedprox_femnist.share\n",
-    "rm -rf /tmp/femnist/fedprox_femnist\n",
-    "rm -rf ./logs/femnist/fedprox_femnist\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedprox_femnist.share\\\n",
-    "    --task femnist\\\n",
-    "    --data_root benchmark/datasets/femnist/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedprox\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedprox_femnist\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -162,28 +178,32 @@
     "### FedScaffold\n",
     "\n",
     "```bash\n",
+    "task_name=\"femnist\"\n",
+    "fed_optim=\"fedscaffold\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedscaffold_femnist.share\n",
-    "rm -rf /tmp/femnist/fedscaffold_femnist\n",
-    "rm -rf ./logs/femnist/fedscaffold_femnist\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedscaffold_femnist.share\\\n",
-    "    --task femnist\\\n",
-    "    --data_root benchmark/datasets/femnist/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedscaffold\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedscaffold_femnist\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -205,7 +225,9 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "from benchmark.utils.plot import plot"
+    "from benchmark.utils.plot import plot\n",
+    "\n",
+    "task_name = \"femnist\""
    ]
   },
   {
@@ -225,11 +247,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/femnist/fedavg_femnist/femnist.json',\n",
-    "        '../logs/femnist/fedsgd_femnist/femnist.json',\n",
-    "        '../logs/femnist/fedela_femnist/femnist.json',\n",
-    "        '../logs/femnist/fedprox_femnist/femnist.json',\n",
-    "        '../logs/femnist/fedscaffold_femnist/femnist.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
@@ -260,11 +282,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/femnist/fedavg_femnist/femnist.json',\n",
-    "        '../logs/femnist/fedsgd_femnist/femnist.json',\n",
-    "        '../logs/femnist/fedela_femnist/femnist.json',\n",
-    "        '../logs/femnist/fedprox_femnist/femnist.json',\n",
-    "        '../logs/femnist/fedscaffold_femnist/femnist.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
@@ -274,7 +296,7 @@
     "        'FedScaffold',\n",
     "    ],\n",
     "    attributes=\"loss\",\n",
-    "    mode='train'\n",
+    "    mode=\"train\"\n",
     ")"
    ]
   },
@@ -295,11 +317,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/femnist/fedavg_femnist/femnist.json',\n",
-    "        '../logs/femnist/fedsgd_femnist/femnist.json',\n",
-    "        '../logs/femnist/fedela_femnist/femnist.json',\n",
-    "        '../logs/femnist/fedprox_femnist/femnist.json',\n",
-    "        '../logs/femnist/fedscaffold_femnist/femnist.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
@@ -309,7 +331,7 @@
     "        'FedScaffold',\n",
     "    ],\n",
     "    attributes=\"accuracy\",\n",
-    "    mode='test'\n",
+    "    mode=\"test\"\n",
     ")"
    ]
   },
@@ -330,11 +352,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/femnist/fedavg_femnist/femnist.json',\n",
-    "        '../logs/femnist/fedsgd_femnist/femnist.json',\n",
-    "        '../logs/femnist/fedela_femnist/femnist.json',\n",
-    "        '../logs/femnist/fedprox_femnist/femnist.json',\n",
-    "        '../logs/femnist/fedscaffold_femnist/femnist.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
