--- a/docs/mnist.ipynb
+++ b/docs/mnist.ipynb
@@ -26,30 +26,35 @@
     "### FedAvg\n",
     "\n",
     "```bash\n",
+    "task_name=\"mnist\"\n",
+    "fed_optim=\"fedavg\"\n",
+    "partition=\"dirichlet\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedavg_dirichlet.share\n",
-    "rm -rf /tmp/mnist/fedavg_dirichlet\n",
-    "rm -rf ./logs/mnist/fedavg_dirichlet\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}_${partition}.share\n",
+    "rm -rf /tmp/${task_name}_${partition}/${fed_optim}\n",
+    "rm -rf ./logs/${task_name}_${partition}/${fed_optim}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedavg_dirichlet.share\\\n",
-    "    --task mnist\\\n",
-    "    --data_root benchmark/datasets/mnist/data\\\n",
-    "    --partition dirichlet\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${partition}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
+    "    --partition ${partition}\\\n",
     "    --num_parts 1000\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedavg\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedavg_dirichlet\\\n",
+    "    --exp_name ${fed_optim}_${partition}_${partition}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -62,30 +67,35 @@
     "### FedSGD\n",
     "\n",
     "```bash\n",
+    "task_name=\"mnist\"\n",
+    "fed_optim=\"fedsgd\"\n",
+    "partition=\"dirichlet\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedsgd_dirichlet.share\n",
-    "rm -rf /tmp/mnist/fedsgd_dirichlet\n",
-    "rm -rf ./logs/mnist/fedsgd_dirichlet\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}_${partition}.share\n",
+    "rm -rf /tmp/${task_name}_${partition}/${fed_optim}\n",
+    "rm -rf ./logs/${task_name}_${partition}/${fed_optim}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedsgd_dirichlet.share\\\n",
-    "    --task mnist\\\n",
-    "    --data_root benchmark/datasets/mnist/data\\\n",
-    "    --partition dirichlet\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${partition}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
+    "    --partition ${partition}\\\n",
     "    --num_parts 1000\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedsgd\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedsgd_dirichlet\\\n",
+    "    --exp_name ${fed_optim}_${partition}_${partition}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -98,30 +108,35 @@
     "### FedEla\n",
     "\n",
     "```bash\n",
+    "task_name=\"mnist\"\n",
+    "fed_optim=\"fedela\"\n",
+    "partition=\"dirichlet\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedela_dirichlet.share\n",
-    "rm -rf /tmp/mnist/fedela_dirichlet\n",
-    "rm -rf ./logs/mnist/fedela_dirichlet\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}_${partition}.share\n",
+    "rm -rf /tmp/${task_name}_${partition}/${fed_optim}\n",
+    "rm -rf ./logs/${task_name}_${partition}/${fed_optim}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedela_dirichlet.share\\\n",
-    "    --task mnist\\\n",
-    "    --data_root benchmark/datasets/mnist/data\\\n",
-    "    --partition dirichlet\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${partition}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
+    "    --partition ${partition}\\\n",
     "    --num_parts 1000\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedela\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedela_dirichlet\\\n",
+    "    --exp_name ${fed_optim}_${partition}_${partition}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -134,30 +149,35 @@
     "### FedProx\n",
     "\n",
     "```bash\n",
+    "task_name=\"mnist\"\n",
+    "fed_optim=\"fedprox\"\n",
+    "partition=\"dirichlet\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedprox_dirichlet.share\n",
-    "rm -rf /tmp/mnist/fedprox_dirichlet\n",
-    "rm -rf ./logs/mnist/fedprox_dirichlet\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}_${partition}.share\n",
+    "rm -rf /tmp/${task_name}_${partition}/${fed_optim}\n",
+    "rm -rf ./logs/${task_name}_${partition}/${fed_optim}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedprox_dirichlet.share\\\n",
-    "    --task mnist\\\n",
-    "    --data_root benchmark/datasets/mnist/data\\\n",
-    "    --partition dirichlet\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${partition}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
+    "    --partition ${partition}\\\n",
     "    --num_parts 1000\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedprox\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedprox_dirichlet\\\n",
+    "    --exp_name ${fed_optim}_${partition}_${partition}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -170,30 +190,35 @@
     "### FedScaffold\n",
     "\n",
     "```bash\n",
+    "task_name=\"mnist\"\n",
+    "fed_optim=\"fedscaffold\"\n",
+    "partition=\"dirichlet\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedscaffold_dirichlet.share\n",
-    "rm -rf /tmp/mnist/fedscaffold_dirichlet\n",
-    "rm -rf ./logs/mnist/fedscaffold_dirichlet\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}_${partition}.share\n",
+    "rm -rf /tmp/${task_name}_${partition}/${fed_optim}\n",
+    "rm -rf ./logs/${task_name}_${partition}/${fed_optim}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedscaffold_dirichlet.share\\\n",
-    "    --task mnist\\\n",
-    "    --data_root benchmark/datasets/mnist/data\\\n",
-    "    --partition dirichlet\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${partition}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
+    "    --partition ${partition}\\\n",
     "    --num_parts 1000\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedscaffold\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedscaffold_dirichlet\\\n",
+    "    --exp_name ${fed_optim}_${partition}_${partition}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -215,7 +240,9 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "from benchmark.utils.plot import plot"
+    "from benchmark.utils.plot import plot\n",
+    "\n",
+    "task_name = \"mnist\""
    ]
   },
   {
@@ -256,11 +283,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/mnist/fedavg_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fedsgd_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fedela_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fedprox_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fedscaffold_dirichlet/mnist.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
@@ -304,11 +331,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/mnist/fedavg_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fedsgd_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fedela_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fedprox_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fedscaffold_dirichlet/mnist.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
@@ -352,11 +379,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/mnist/fedavg_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fedsgd_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fedela_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fedprox_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fedscaffold_dirichlet/mnist.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
@@ -400,11 +427,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/mnist/fedavg_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fedsgd_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fedela_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fedprox_dirichlet/mnist.json',\n",
-    "        '../logs/mnist/fedscaffold_dirichlet/mnist.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
