--- a/docs/reddit.ipynb
+++ b/docs/reddit.ipynb
@@ -5,7 +5,7 @@
    "id": "1a5d2e68",
    "metadata": {},
    "source": [
-    "# Cifar100"
+    "# Reddit"
    ]
   },
   {
@@ -26,28 +26,32 @@
     "### FedAvg\n",
     "\n",
     "```bash\n",
+    "task_name=\"reddit\"\n",
+    "fed_optim=\"fedavg\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedavg_reddit.share\n",
-    "rm -rf /tmp/reddit/fedavg_reddit\n",
-    "rm -rf ./logs/reddit/fedavg_reddit\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedavg_reddit.share\\\n",
-    "    --task reddit\\\n",
-    "    --data_root benchmark/datasets/reddit/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedavg\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedavg_reddit\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -60,28 +64,32 @@
     "### FedSgd\n",
     "\n",
     "```bash\n",
+    "task_name=\"reddit\"\n",
+    "fed_optim=\"fedsgd\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedsgd_reddit.share\n",
-    "rm -rf /tmp/reddit/fedsgd_reddit\n",
-    "rm -rf ./logs/reddit/fedsgd_reddit\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedsgd_reddit.share\\\n",
-    "    --task reddit\\\n",
-    "    --data_root benchmark/datasets/reddit/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedsgd\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedsgd_reddit\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -94,28 +102,32 @@
     "### FedEla\n",
     "\n",
     "```bash\n",
+    "task_name=\"reddit\"\n",
+    "fed_optim=\"fedela\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedela_reddit.share\n",
-    "rm -rf /tmp/reddit/fedela_reddit\n",
-    "rm -rf ./logs/reddit/fedela_reddit\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedela_reddit.share\\\n",
-    "    --task reddit\\\n",
-    "    --data_root benchmark/datasets/reddit/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedela\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedela_reddit\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -128,28 +140,32 @@
     "### FedProx\n",
     "\n",
     "```bash\n",
+    "task_name=\"reddit\"\n",
+    "fed_optim=\"fedprox\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedprox_reddit.share\n",
-    "rm -rf /tmp/reddit/fedprox_reddit\n",
-    "rm -rf ./logs/reddit/fedprox_reddit\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedprox_reddit.share\\\n",
-    "    --task reddit\\\n",
-    "    --data_root benchmark/datasets/reddit/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedprox\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedprox_reddit\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -162,28 +178,32 @@
     "### FedScaffold\n",
     "\n",
     "```bash\n",
+    "task_name=\"reddit\"\n",
+    "fed_optim=\"fedscaffold\"\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/fedscaffold_reddit.share\n",
-    "rm -rf /tmp/reddit/fedscaffold_reddit\n",
-    "rm -rf ./logs/reddit/fedscaffold_reddit\n",
+    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
+    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/fedscaffold_reddit.share\\\n",
-    "    --task reddit\\\n",
-    "    --data_root benchmark/datasets/reddit/data\\\n",
+    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --task ${task_name}\\\n",
+    "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
     "    --rounds 20\\\n",
     "    --act_clts 100\\\n",
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
-    "    --optim fedscaffold\\\n",
+    "    --optim ${fed_optim}\\\n",
     "    --follower_lr 1e-2\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name fedscaffold_reddit\\\n",
+    "    --exp_name ${fed_optim}_${task_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -205,7 +225,9 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "from benchmark.utils.plot import plot"
+    "from benchmark.utils.plot import plot\n",
+    "\n",
+    "task_name = \"reddit\""
    ]
   },
   {
@@ -225,11 +247,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/reddit/fedavg_reddit/reddit.json',\n",
-    "        '../logs/reddit/fedsgd_reddit/reddit.json',\n",
-    "        '../logs/reddit/fedela_reddit/reddit.json',\n",
-    "        '../logs/reddit/fedprox_reddit/reddit.json',\n",
-    "        '../logs/reddit/fedscaffold_reddit/reddit.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
@@ -260,11 +282,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/reddit/fedavg_reddit/reddit.json',\n",
-    "        '../logs/reddit/fedsgd_reddit/reddit.json',\n",
-    "        '../logs/reddit/fedela_reddit/reddit.json',\n",
-    "        '../logs/reddit/fedprox_reddit/reddit.json',\n",
-    "        '../logs/reddit/fedscaffold_reddit/reddit.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
@@ -295,11 +317,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/reddit/fedavg_reddit/reddit.json',\n",
-    "        '../logs/reddit/fedsgd_reddit/reddit.json',\n",
-    "        '../logs/reddit/fedela_reddit/reddit.json',\n",
-    "        '../logs/reddit/fedprox_reddit/reddit.json',\n",
-    "        '../logs/reddit/fedscaffold_reddit/reddit.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
@@ -330,11 +352,11 @@
    "source": [
     "plot(\n",
     "    files=[\n",
-    "        '../logs/reddit/fedavg_reddit/reddit.json',\n",
-    "        '../logs/reddit/fedsgd_reddit/reddit.json',\n",
-    "        '../logs/reddit/fedela_reddit/reddit.json',\n",
-    "        '../logs/reddit/fedprox_reddit/reddit.json',\n",
-    "        '../logs/reddit/fedscaffold_reddit/reddit.json',\n",
+    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
     "    ],\n",
     "    labels=[\n",
     "        'FedAvg',\n",
