--- a/docs/synthetic.ipynb
+++ b/docs/synthetic.ipynb
@@ -26,17 +26,19 @@
     "### FedAvg\n",
     "\n",
     "```bash\n",
-    "task_name=\"synthetic\"\n",
     "fed_optim=\"fedavg\"\n",
     "\n",
+    "task_name=\"synthetic\"\n",
+    "exp_name=${fed_optim}_${task_name}\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
-    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
-    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf /tmp/${exp_name}.share\n",
+    "rm -rf /tmp/${exp_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}\n",
     "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --fed_init_method file:///tmp/${exp_name}.share\\\n",
     "    --task ${task_name}\\\n",
     "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
@@ -45,13 +47,14 @@
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
     "    --optim ${fed_optim}\\\n",
-    "    --follower_lr 1e-2\\\n",
+    "    --optim_args momentum:0.9 weight_decay:1e-4\\\n",
+    "    --follower_lr 1e-1\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name ${fed_optim}_${task_name}\\\n",
+    "    --exp_name ${exp_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -64,17 +67,19 @@
     "### FedSgd\n",
     "\n",
     "```bash\n",
-    "task_name=\"synthetic\"\n",
     "fed_optim=\"fedsgd\"\n",
     "\n",
+    "task_name=\"synthetic\"\n",
+    "exp_name=${fed_optim}_${task_name}\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
-    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
-    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf /tmp/${exp_name}.share\n",
+    "rm -rf /tmp/${exp_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}\n",
     "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --fed_init_method file:///tmp/${exp_name}.share\\\n",
     "    --task ${task_name}\\\n",
     "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
@@ -83,13 +88,14 @@
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
     "    --optim ${fed_optim}\\\n",
-    "    --follower_lr 1e-2\\\n",
+    "    --optim_args momentum:0.9 weight_decay:1e-4\\\n",
+    "    --follower_lr 1e-1\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name ${fed_optim}_${task_name}\\\n",
+    "    --exp_name ${exp_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -102,17 +108,19 @@
     "### FedEla\n",
     "\n",
     "```bash\n",
-    "task_name=\"synthetic\"\n",
     "fed_optim=\"fedela\"\n",
     "\n",
+    "task_name=\"synthetic\"\n",
+    "exp_name=${fed_optim}_${task_name}\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
-    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
-    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf /tmp/${exp_name}.share\n",
+    "rm -rf /tmp/${exp_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}\n",
     "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --fed_init_method file:///tmp/${exp_name}.share\\\n",
     "    --task ${task_name}\\\n",
     "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
@@ -121,13 +129,14 @@
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
     "    --optim ${fed_optim}\\\n",
-    "    --follower_lr 1e-2\\\n",
+    "    --optim_args momentum:0.9 weight_decay:1e-4\\\n",
+    "    --follower_lr 1e-1\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name ${fed_optim}_${task_name}\\\n",
+    "    --exp_name ${exp_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -140,17 +149,19 @@
     "### FedProx\n",
     "\n",
     "```bash\n",
-    "task_name=\"synthetic\"\n",
     "fed_optim=\"fedprox\"\n",
     "\n",
+    "task_name=\"synthetic\"\n",
+    "exp_name=${fed_optim}_${task_name}\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
-    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
-    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf /tmp/${exp_name}.share\n",
+    "rm -rf /tmp/${exp_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}\n",
     "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --fed_init_method file:///tmp/${exp_name}.share\\\n",
     "    --task ${task_name}\\\n",
     "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
@@ -159,13 +170,14 @@
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
     "    --optim ${fed_optim}\\\n",
-    "    --follower_lr 1e-2\\\n",
+    "    --optim_args momentum:0.9 weight_decay:1e-4\\\n",
+    "    --follower_lr 1e-1\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name ${fed_optim}_${task_name}\\\n",
+    "    --exp_name ${exp_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -178,17 +190,19 @@
     "### FedScaffold\n",
     "\n",
     "```bash\n",
-    "task_name=\"synthetic\"\n",
     "fed_optim=\"fedscaffold\"\n",
     "\n",
+    "task_name=\"synthetic\"\n",
+    "exp_name=${fed_optim}_${task_name}\n",
+    "\n",
     "# Delete cache file\n",
-    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
-    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
-    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
+    "rm -rf /tmp/${exp_name}.share\n",
+    "rm -rf /tmp/${exp_name}\n",
+    "rm -rf ./logs/${task_name}/${fed_optim}\n",
     "\n",
     "# Run\n",
     "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
+    "    --fed_init_method file:///tmp/${exp_name}.share\\\n",
     "    --task ${task_name}\\\n",
     "    --data_root benchmark/datasets/${task_name}/data\\\n",
     "    --epochs 1\\\n",
@@ -197,13 +211,14 @@
     "    --tst_act_clts 100\\\n",
     "    --max_acg_step -1\\\n",
     "    --optim ${fed_optim}\\\n",
-    "    --follower_lr 1e-2\\\n",
+    "    --optim_args momentum:0.9 weight_decay:1e-4\\\n",
+    "    --follower_lr 1e-1\\\n",
     "    --leader_lr 10.0\\\n",
     "    --bz 10\\\n",
     "    --gpu\\\n",
     "    --log_level SUCCESS\\\n",
     "    --log_dir logs\\\n",
-    "    --exp_name ${fed_optim}_${task_name}\\\n",
+    "    --exp_name ${exp_name}\\\n",
     "    --seed 0\n",
     "```"
    ]
@@ -227,7 +242,18 @@
     "\n",
     "from benchmark.utils.plot import plot\n",
     "\n",
-    "task_name = \"synthetic\""
+    "task_name = \"synthetic\"\n",
+    "\n",
+    "items = dict(\n",
+    "    FedAvg=f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "    FedSgd=f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "    FedEla=f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "    FedProx=f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "    FedScaffold=f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
+    ")\n",
+    "\n",
+    "files = items.values()\n",
+    "labels = items.keys()"
    ]
   },
   {
@@ -246,20 +272,8 @@
    "outputs": [],
    "source": [
     "plot(\n",
-    "    files=[\n",
-    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
-    "    ],\n",
-    "    labels=[\n",
-    "        'FedAvg',\n",
-    "        'FedSgd',\n",
-    "        'FedEla',\n",
-    "        'FedProx',\n",
-    "        'FedScaffold',\n",
-    "    ],\n",
+    "    files=files,\n",
+    "    labels=labels,\n",
     "    attributes=\"accuracy\",\n",
     "    mode='train'\n",
     ")"
@@ -281,22 +295,10 @@
    "outputs": [],
    "source": [
     "plot(\n",
-    "    files=[\n",
-    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
-    "    ],\n",
-    "    labels=[\n",
-    "        'FedAvg',\n",
-    "        'FedSgd',\n",
-    "        'FedEla',\n",
-    "        'FedProx',\n",
-    "        'FedScaffold',\n",
-    "    ],\n",
+    "    files=files,\n",
+    "    labels=labels,\n",
     "    attributes=\"loss\",\n",
-    "    mode='train'\n",
+    "    mode=\"train\"\n",
     ")"
    ]
   },
@@ -316,22 +318,10 @@
    "outputs": [],
    "source": [
     "plot(\n",
-    "    files=[\n",
-    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
-    "    ],\n",
-    "    labels=[\n",
-    "        'FedAvg',\n",
-    "        'FedSgd',\n",
-    "        'FedEla',\n",
-    "        'FedProx',\n",
-    "        'FedScaffold',\n",
-    "    ],\n",
+    "    files=files,\n",
+    "    labels=labels,\n",
     "    attributes=\"accuracy\",\n",
-    "    mode='test'\n",
+    "    mode=\"test\"\n",
     ")"
    ]
   },
@@ -351,20 +341,8 @@
    "outputs": [],
    "source": [
     "plot(\n",
-    "    files=[\n",
-    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
-    "    ],\n",
-    "    labels=[\n",
-    "        'FedAvg',\n",
-    "        'FedSgd',\n",
-    "        'FedEla',\n",
-    "        'FedProx',\n",
-    "        'FedScaffold',\n",
-    "    ],\n",
+    "    files=files,\n",
+    "    labels=labels,\n",
     "    attributes=\"loss\",\n",
     "    mode='test'\n",
     ")"
